// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<p
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
>
  Hello world
</p>
`;

exports[`composition hook should return with Link props 1`] = `
Object {
  "className": "css-a2rsep css-4lfl7m css-1yuzjtp fp-Box fp-Link",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<a
  class="emotion-0 emotion-1 emotion-2 test fp-Box fp-Link"
>
  hello world
</a>
`;

exports[`overrides Link.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0.emotion-0 {
  background-color: #ff0000;
}

<a
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
>
  hello world
</a>
`;

exports[`overrides Link.hover should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover.emotion-0:hover {
  background-color: #ff0000;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<a
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
>
  hello world
</a>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<a
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
>
  Hello world
</a>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-2 {
  color: #574feb !important;
}

<a
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
>
  Hello world
</a>
`;

exports[`theming Link.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0.emotion-0 {
  background-color: #ff0000;
}

<a
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
>
  hello world
</a>
`;

exports[`theming Link.hover should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover.emotion-0:hover {
  background-color: #ff0000;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<a
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
>
  hello world
</a>
`;
